<resources>
    <string name="app_name">Coinly</string>
    <string name="ProfilePageTitle">Create your Profile</string>
    <string name="Big">Big</string>
    <string name="Little">Little</string>
    <string name="real_name">Real Name</string>
    <string name="display_name">Display Name</string>
    <string name="done">Done</string>
    <string name="sign_out">Sign out</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="user_profile_picture">User profile picture</string>
    <string name="add">Add</string>
    <string name="display_name_holder">DisplayName</string>
    <string name="add_as_big">Add as Big</string>
    <string name="add_as_little">add as Little</string>
    <string name="notifications_title">Notifications</string>
    <string name="accept_button_text">Accept</string>
    <string name="accept_request">Accept Request</string>
    <string name="requested">Requested</string>
    <string name="added_as_big">Added as big</string>
    <string name="added_as_little">Added as little</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="app_logo_description">app_logo</string>
    <string name="email_icon_description">email_icon_description</string>
    <string name="password_icon_description">password icon description</string>
    <string name="icon_tablayout_image_view">icon_tablayout_image_view</string>
    <string name="sample_bio">Hi! My name is Edward and I am all about saving our planet and doing the right thing. Go Green!</string>
    <string name="claimed_prizes">Claimed Prizes</string>
    <string name="coins_count_text">Coins</string>
    <string name="bigs">Bigs</string>
    <string name="littles_count_titles">Littles</string>
    <string name="edit_profile_button_text">Edit Profile</string>
    <string name="shown_when_there_are_no_prizes">Shown when there are no prizes</string>
    <string name="shown_when_there_are_no_notifications">Shown when there are no notifications</string>
    <string name="progress_bar_description">Progress bar description</string>
    <string name="prizes_title">Prizes</string>
    <string name="bio">Bio</string>
    <string name="all_prizes_given">All Prizes Given</string>
    <string name="all_prizes_claimed">All Prizes Claimed</string>
    <string name="remove_little">Remove Little</string>
    <string name="your_set_prizes">Your Set Prizes</string>
    <string name="claimed_prizes_from_you">Claimed Prizes From You</string>
    <string name="coins">Coins</string>
    <string name="actions">Actions</string>
    <string name="give_coins">Give Coins</string>
    <string name="remove_big">Remove Big</string>
    <string name="request_coins">Request Coins</string>
    <string name="prizes">Prizes</string>
    <string name="prizes_you_ve_claimed">Prizes You\'ve Claimed</string>
    <string name="edit_your_profile">Edit your profile</string>
    <string name="giving_coins_to">Giving Coins To</string>
    <string name="coins_giving">Coins Giving</string>
    <string name="add_a_note_optional">Add a note (optional)</string>
    <string name="cancel">Cancel</string>
    <string name="revoking_coins_from">Revoking Coins From</string>
    <string name="coins_revoking">Coins Revoking</string>
    <string name="reason_for_revocation">Reason for Revocation</string>
    <string name="case_title">Case</string>
    <string name="desired_actions">Desired Actions</string>
    <string name="requesting_coins_from">Requesting Coins From</string>
    <string name="coins_requesting">Coins Requesting</string>
    <string name="reason_for_request">Reason For Request</string>
    <string name="send_request">Send Request</string>
    <string name="your_spending_power">Your spending power:</string>
    <string name="settings">Settings</string>
    <string name="change">Change</string>
    <string name="zero">0</string>
    <string name="back_arrow">back arrow</string>
    <string name="quick_actions">Quick Actions</string>
    <string name="set_prize">Set Prize</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="set_new_prize">Set New Prize</string>
    <string name="set">Set</string>
    <string name="claim_prize">Claim Prize</string>
    <string name="claim">Claim</string>
    <string name="prize_info">Prize Info</string>
    <string name="stats_title">Stats</string>
    <string name="prizes_given">Prizes Given</string>
    <string name="average_price_of_prizes_given_label">Average Price of Prizes Given</string>
    <string name="prizes_claimed_label">Prizes Claimed</string>
    <string name="average_price_of_prizes_claimed">Average Price of Prizes Claimed</string>
    <string name="notification">Notification</string>
    <string name="notification_content_placeholder">Notification content</string>
    <string name="OK">OK</string>
    <string name="accept">Accept</string>
    <string name="delete">Delete</string>
    <string name="Request_Denial_Message">You don\'t have enough coins! Denying Request</string>
    <string name="note">Note</string>
    <string name="reason">Reason</string>
    <string name="no_bigs_message">Go to the linkup page to add your next big!</string>
    <string name="no_littles_message">Go to the linkup page to add your next little!</string>
    <string name="sign_up_with_google">Sign up with Google</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="back">Back</string>
    <string name="price_with_coins">Price: %1$s coins</string>
    <string name="coins_price">%1$s coins</string>
    <string name="add_new_prize">Add new prize</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_text">Remove %1$s?</string>
    <string name="remove">Remove</string>
    <string name="all_prizes_claimed_menu_item">All Prizes Claimed</string>
    <string name="transaction_history">Transaction History</string>
    <string name="notifications">Notifications</string>
    <string name="from_eightnine_software">From EightNine Software</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password"><u>FORGOT PASSWORD</u></string>
    <string name="passwords_don_t_match">Passwords do not match</string>
    <string name="password_too_weak">Password too weak</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="already_exists">Account with that email already exists</string>
    <string name="login">Login</string>
    <string name="wrong_password">Wrong password. Did you sign up with Google?</string>
    <string name="no_account">Account does not exist with that email</string>
    <string name="send_reset_password_link">Send Reset Password Link</string>
</resources>
