<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_screen_gradient">

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:src="@drawable/coinly_logo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_logo_description" />

    <ImageView
        android:id="@+id/email_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/logo_image_view"
        android:src="@drawable/email_icon"
        android:layout_alignTop="@+id/email_edit_text"
        android:layout_alignBottom="@+id/email_edit_text"
        android:layout_below="@+id/logo_image_view"
        android:contentDescription="@string/email_icon_description" />

    <ImageView
        android:id="@+id/lock_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/logo_image_view"
        android:src="@drawable/password_lock_icon"
        android:layout_alignTop="@+id/password_edit_text"
        android:layout_alignBottom="@+id/password_edit_text"
        android:layout_below="@+id/logo_image_view"
        android:contentDescription="@string/password_icon_description" />

    <EditText
        android:id="@+id/email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_toEndOf="@+id/email_icon"
        android:layout_below="@+id/logo_image_view"
        android:layout_alignEnd="@+id/logo_image_view"
        android:layout_marginTop="150dp"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:autofillHints="@string/email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:layout_below="@+id/email_edit_text"
        android:layout_alignEnd="@+id/logo_image_view"
        android:layout_toEndOf="@+id/lock_icon"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:backgroundTint="@color/white"
        android:autofillHints="@string/password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignStart="@+id/logo_image_view"
        android:layout_alignEnd="@+id/logo_image_view"
        android:layout_below="@+id/password_edit_text"
        android:text="@string/login"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        android:background="@drawable/rounded_button"/>

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/login_button"/>

</RelativeLayout>