<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/new_prize_cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="20dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="100dp">

        <ImageView
            android:id="@+id/new_prize_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/user_profile_picture"
            android:scaleType="centerCrop" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/prize_title"
        android:hint="@string/title"
        android:layout_below="@+id/new_prize_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:autofillHints="@string/title"/>

    <EditText
        android:id="@+id/prize_price"
        android:hint="@string/price"
        android:layout_below="@id/prize_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:inputType="text"
        android:autofillHints="@string/price"/>

</RelativeLayout>