<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".views.activities.profiles.CreateProfileActivity">

            <TextView
                android:id="@+id/requesting_coins_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/requesting_coins_from"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/requesting_coins_title_textView">

                <ImageView
                    android:id="@+id/user_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/face_icon"
                    android:contentDescription="@string/user_profile_picture"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/display_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/display_name"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardView"/>

            <TextView
                android:id="@+id/coins_requesting_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coins_requesting"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/coins_requesting_edit_text"
                app:layout_constraintTop_toBottomOf="@id/display_name_text_view"
                app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                android:id="@+id/coins_requesting_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:autofillHints=""
                android:padding="5dp"
                android:hint="@string/coins"
                android:inputType="number"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:gravity="top|start"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toEndOf="@id/coins_requesting_textView"
                app:layout_constraintTop_toTopOf="@id/coins_requesting_textView"
                app:layout_constraintBottom_toBottomOf="@+id/coins_requesting_textView"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/reason_for_request_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reason_for_request"
                android:fontFamily="sans-serif"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/coins_requesting_textView"/>

            <EditText
                android:id="@+id/request_reason_edit_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints=""
                android:padding="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:textCursorDrawable="@null"
                android:textColor="@color/black"
                android:gravity="top|start"
                android:hint="@string/reason"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reason_for_request_title_textView"/>

                <Button
                    android:id="@+id/send_request_button"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_green"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    android:text="@string/send_request"
                    tools:ignore="ButtonStyle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/cancel_request_coins_button"
                    app:layout_constraintTop_toBottomOf="@id/request_reason_edit_text"/>

                <Button
                    android:id="@+id/cancel_request_coins_button"
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rounded_button_light_gray"
                    android:layout_marginTop="15dp"
                    android:textSize="12sp"
                    android:text="@string/cancel"
                    tools:ignore="ButtonStyle"
                    app:layout_constraintStart_toEndOf="@id/send_request_button"
                    app:layout_constraintTop_toBottomOf="@id/request_reason_edit_text"
                    app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>