<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/my_profile_rounded_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/notification_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:layout_marginTop="10dp"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/notification_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:textSize="15sp"
        android:text="@string/notification_content_placeholder"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:gravity="center"
        android:layout_below="@id/notification_title"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_content"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:clipToPadding="false">
        <Button
            android:id="@+id/accept_button"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_green"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="5dp"
            android:textSize="12sp"
            android:text="@string/accept"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel_notification_button"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:background="@drawable/rounded_button_light_gray"
            android:layout_marginTop="2dp"
            android:textSize="12sp"
            android:text="@string/delete"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</RelativeLayout>