<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_screen_gradient"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        tools:context=".views.activities.profiles.CreateProfileActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/user_profile_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@drawable/my_profile_rounded_background"
            tools:context=".views.activities.profiles.CreateProfileActivity"
            tools:ignore="RtlSymmetry,UselessParent"
            android:clipToPadding="false">

            <TextView
                android:id="@+id/giving_coins_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/giving_coins_to"
                android:fontFamily="sans-serif"
                android:layout_marginTop="10dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"
                app:layout_constraintTop_toTopOf="@id/user_profile_body"/>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_marginTop="10dp"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"
                app:layout_constraintTop_toBottomOf="@id/giving_coins_title_textView">

                <ImageView
                    android:id="@+id/user_profile_picture"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/face_icon"
                    android:contentDescription="@string/user_profile_picture"
                    android:scaleType="centerCrop" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/display_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/display_name"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"
                app:layout_constraintTop_toBottomOf="@id/cardView"/>

            <TextView
                android:id="@+id/coins_giving_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/coins_giving"
                android:fontFamily="sans-serif"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toStartOf="@id/coins_giving_edit_text"
                app:layout_constraintTop_toBottomOf="@id/display_name_text_view"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"/>

            <EditText
                android:id="@+id/coins_giving_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_background"
                android:autofillHints=""
                android:inputType="number"
                android:gravity="top|start"
                android:layout_marginStart="10dp"
                android:hint="@string/coins"
                app:layout_constraintStart_toEndOf="@id/coins_giving_textView"
                app:layout_constraintTop_toTopOf="@id/coins_giving_textView"
                app:layout_constraintTop_toBottomOf="@+id/coins_giving_textView"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"/>

            <TextView
                android:id="@+id/optional_note_title_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/add_a_note_optional"
                android:fontFamily="sans-serif"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"
                app:layout_constraintTop_toBottomOf="@id/coins_giving_textView"/>

            <EditText
                android:id="@+id/optional_note_edit_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/edit_text_background"
                android:autofillHints=""
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:gravity="top|start"
                android:hint="@string/note"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"
                app:layout_constraintTop_toBottomOf="@id/optional_note_title_textView"/>

            <LinearLayout
                android:id="@+id/action_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:clipToPadding="false"
                app:layout_constraintVertical_bias=".9"
                app:layout_constraintStart_toStartOf="@id/user_profile_body"
                app:layout_constraintEnd_toEndOf="@id/user_profile_body"
                app:layout_constraintTop_toBottomOf="@id/optional_note_edit_text"
                app:layout_constraintBottom_toBottomOf="@id/user_profile_body">
                <Button
                    android:id="@+id/give_coins_button"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_button_green"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="12sp"
                    android:text="@string/give_coins"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/cancel_give_coins_button"
                    android:layout_width="0dp"
                    android:layout_height="25dp"
                    android:layout_weight="1"
                    android:layout_marginStart="5dp"
                    android:background="@drawable/rounded_button_light_gray"
                    android:layout_marginTop="2dp"
                    android:textSize="12sp"
                    android:text="@string/cancel"
                    tools:ignore="ButtonStyle" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
